--- a/src/app/pages/renter/home-service/home-service.component.html
+++ b/src/app/pages/renter/home-service/home-service.component.html
@@ -1,61 +1,92 @@
-<div class="heading-clean">Fox Clean</div>
-<p class="slogan">Your comfort is our top priority!</p>
+<app-header-nav-bar></app-header-nav-bar>
 
-<div>
-  <div class="clean4u">
-    <img src="assets/images/clean4u.jpg" class="frame" />
-    <div class="name">Clean4u - Giúp việc tận nơi</div>
-    <div class="hour">$10/hour</div>
-  </div>
-  <div class="btaskee">
-    <img src="assets/images/btaskee.png" class="frame" />
-    <div class="name">bTaskee</div>
-    <div class="hour">$16/day</div>
-  </div>
-  <div class="jupviec">
-    <img src="assets/images/jupviec.jpg" class="frame" />
-    <div class="name">JupViec.vn</div>
-    <div class="hour">$25/day</div>
-  </div>
-  <div class="pvn">
-    <img src="assets/images/pvn.png" class="frame" />
-    <div class="name">Phụ việc nhanh</div>
-    <div class="hour">$18/day</div>
-  </div>
-</div>
+<div class="px-5 py-3">
+  <div class="d-flex flex-column service-section">
+    <div>
+      <h2 class="service-section-heading">Fox Clean</h2>
+      <p class="service-section-slogan">Your comfort is our top priority!</p>
+      <div class="row row-cols-4 service-list">
+        <div class="col fox-service-item">
+          <img src="assets/images/clean4u.jpg" class="brand-image" />
+          <p class="service-name">Clean4u - Giúp việc tận nơi</p>
+          <p class="service-price">$10/hour</p>
+        </div>
+        <div class="col fox-service-item">
+          <img src="assets/images/btaskee.png" class="brand-image" />
+          <p class="service-name">bTaskee</p>
+          <p class="service-price">$16/day</p>
+        </div>
+        <div class="col fox-service-item">
+          <img src="assets/images/jupviec.jpg" class="brand-image" />
+          <p class="service-name">JupViec.vn</p>
+          <p class="service-price">$25/day</p>
+        </div>
+        <div class="col fox-service-item">
+          <img src="assets/images/pvn.png" class="brand-image" />
+          <p class="service-name">Phụ việc nhanh</p>
+          <p class="service-price">$18/day</p>
+        </div>
+      </div>
+    </div>
 
-<div class="heading-fix">Fox Fix</div>
-<p class="slogan">Your comfort is our top priority!</p>
-
-<div class="fixhome">
-  <img src="assets/images/fixhome.jpg" class="frame" />
-  <div class="name">Fixhome</div>
-  <div class="hour">$10/hour</div>
-</div>
-<div class="nhaxanh">
-  <img src="assets/images/nhaxanh.jpg" class="frame" />
-  <div class="name">Nhà Xanh</div>
-  <div class="hour">$15/day</div>
-</div>
-<div class="masterhome">
-  <img src="assets/images/masterhome.jpg" class="frame" />
-  <div class="name">Masterhome - Furniture & Decor</div>
-  <div class="hour">$15/day</div>
-</div>
-
-<div class="heading-collab">
-  Why Should You Collaborate With Us?
-  <img src="assets/images/host.png" class="host" />
-  <img src="assets/images/tourist.png" class="tourist" />
-  <img src="assets/images/partner.png" class="partner" />
-</div>
-
-<div class="heading-question"> Got any questions?
-  <div class="statement">
-    Couldn't find your business within the categories above? Simply want to have
-    a chat with our team? Or would you prefer to send a partnership proposal
-    immediately? Send your inquiries to:
+    <div>
+      <h2 class="service-section-heading">Fox Fix</h2>
+      <p class="service-section-slogan">Your comfort is our top priority!</p>
+      <div class="row row-cols-4 service-list">
+        <div class="col fox-service-item">
+          <img src="assets/images/fixhome.jpg" class="brand-image" />
+          <div class="service-name">Fixhome</div>
+          <div class="service-price">$10/service-price</div>
+        </div>
+        <div class="col fox-service-item">
+          <img src="assets/images/nhaxanh.jpg" class="brand-image" />
+          <p class="service-name">Nhà Xanh</p>
+          <p class="service-price">$15/day</p>
+        </div>
+        <div class="col fox-service-item">
+          <img src="assets/images/masterhome.jpg" class="brand-image" />
+          <div class="service-name">Masterhome - Furniture & Decor</div>
+          <div class="service-price">$15/day</div>
+        </div>
+      </div>
+    </div>
   </div>
-  <img class="icon" src="assets/images/icon-envelope.png" />
-  <div class="mail">foxhubvn@gmail.com</div>
+
+
+  <div class="d-flex mt-5 align-items-center">
+    <p class="heading-collaborate">
+      Why Should You Collaborate With Us?
+    </p>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col host collaborate-item">
+          <img src="assets/images/host.png" class="img-fluid rounded" />
+        </div>
+      </div>
+      <div class="row test">
+        <div class="col collaborate-item">
+          <img src="assets/images/tourist.png" class="img-fluid rounded" />
+        </div>
+        <div class="col collaborate-item">
+          <img src="assets/images/partner.png" class="img-fluid rounded" />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="question-section d-flex flex-column">
+    <p>
+      Got any questions?
+    </p>
+    <p class="statement">
+      Couldn't find your business within the categories above? Simply want to have
+      a chat with our team? Or would you prefer to send a partnership proposal
+      immediately? Send your inquiries to:
+    </p>
+    <div class="foxhub-email-container">
+      <img class="icon" src="assets/images/icon-envelope.png" />
+      <span class="mail">foxhubvn@gmail.com</span>
+    </div>
+  </div>
 </div>
