--- a/src/app/pages/renter/story/story.component.html
+++ b/src/app/pages/renter/story/story.component.html
@@ -1,48 +1,54 @@
-<p class="header">FoxHub's story</p>
+<app-header-nav-bar></app-header-nav-bar>
 
-<div class="left-content">
-  <p class="title">Who is FoxHub? <img src="assets/svg/line.svg" /></p>
-  <p>
-    FoxHub was born with the vision of becoming the leading accommodation
-    connection platform in Vietnam, contributing to promoting the development of
-    the tourism industry and related services, positively impacting the domestic
-    economy and bringing unique experience for tourists.
-  </p>
-  <p>
-    From the early days of forming the idea, FoxHub has always emphasized user
-    experience in the process of using the service. FoxHub has set itself the
-    mission of supporting tourists in their journey to find accommodation in
-    Vietnam with the desire to improve image of the country&#39;s service
-    industry in the eyes of international friends, while also acting as a means
-    of stimulating tourism, encouraging domestic and foreign tourists to
-    experience more forms of tourism combined with cultural exploration.
-  </p>
-  <p>
-    With that vision, FoxHub is committed to providing a variety of
-    accommodation types, meeting the needs of target customers; ensure service
-    quality of partners, promote customer satisfaction when using services;
-    optimize your experience with the website.
-  </p>
-</div>
-<div class="right-content">
-  <img src="assets/images/landscape.jpg" />
+<div class="d-flex align-items-center justify-content-evenly mt-5">
+  <div class="about-us-section">
+    <p class="title">Who is FoxHub? <img src="assets/svg/line.svg" /></p>
+    <p>
+      FoxHub was born with the vision of becoming the leading accommodation
+      connection platform in Vietnam, contributing to promoting the development of
+      the tourism industry and related services, positively impacting the domestic
+      economy and bringing unique experience for tourists.
+    </p>
+    <p>
+      From the early days of forming the idea, FoxHub has always emphasized user
+      experience in the process of using the service. FoxHub has set itself the
+      mission of supporting tourists in their journey to find accommodation in
+      Vietnam with the desire to improve image of the country&#39;s service
+      industry in the eyes of international friends, while also acting as a means
+      of stimulating tourism, encouraging domestic and foreign tourists to
+      experience more forms of tourism combined with cultural exploration.
+    </p>
+    <p>
+      With that vision, FoxHub is committed to providing a variety of
+      accommodation types, meeting the needs of target customers; ensure service
+      quality of partners, promote customer satisfaction when using services;
+      optimize your experience with the website.
+    </p>
+  </div>
+  <div class="landscape-container">
+    <img src="assets/images/landscape.jpg" />
+  </div>
 </div>
 
-<div class="mission-vision">
-  <div class="mission-title">Our Mission</div>
-  <p class="mission">
-    "The platform connects experiences between lessors and lessees, generating
-    revenue for the domestic economy, bringing unique travel experiences and
-    contributing to promoting Vietnam&#39;s cultural image to international
-    friends."
-  </p>
-  <div class="vision-title">Our Vision</div>
-  <p class="vision">
-    "Tourism approaches local cultural characteristics, aiming to enhance the
-    user experience when traveling by establishing connections with local hosts,
-    accessing each distinct culture in different locations where customers
-    visit."
-  </p>
+<div class="mission-vision d-flex">
+  <div class="mission">
+    <h3>Our Mission</h3>
+    <p>
+      "The platform connects experiences between lessors and lessees, generating
+      revenue for the domestic economy, bringing unique travel experiences and
+      contributing to promoting Vietnam&#39;s cultural image to international
+      friends."
+    </p>
+  </div>
+  <div class="vision">
+    <h3>Our Vision</h3>
+    <p>
+      "Tourism approaches local cultural characteristics, aiming to enhance the
+      user experience when traveling by establishing connections with local hosts,
+      accessing each distinct culture in different locations where customers
+      visit."
+    </p>
+  </div>
 </div>
 
 <div>
@@ -56,7 +62,7 @@
   </div>
 </div>
 
-<div class="client">
+<div class="client d-flex flex-column align-items-center">
   <p class="client-title">What Our Clients Say?</p>
   <img src="assets/svg/quotation.svg" class="quotation-mark" />
   <p class="comment">
