FH-24 | Fix Story

--- a/src/app/pages/renter/story/story.component.html
+++ b/src/app/pages/renter/story/story.component.html
@@ -54,11 +54,11 @@
 <div>
   <p class="founder-title">Meet our founders</p>
   <div class="image-container">
-    <img src="assets/images/founder.png" />
-    <img src="assets/images/founder.png" />
-    <img src="assets/images/founder.png" />
-    <img src="assets/images/founder.png" />
-    <img src="assets/images/founder.png" />
+    <img src="assets/images/quynh.png" />
+    <img src="assets/images/ngoc.png" />
+    <img src="assets/images/my.png" />
+    <img src="assets/images/hoang.png" />
+    <img src="assets/images/tu.png" />
   </div>
 </div>
 
