FH-36 | Fix UI Homepage

--- a/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.css
+++ b/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.css
@@ -17,9 +17,9 @@
 }
 
 .navbar-container .nav-link {
-    color: #BF6326;
+    color: #CD5C08;
     font-size: 16px;
-    font-family: Inter;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     vertical-align: middle;
 }
@@ -34,15 +34,19 @@
 
 .navbar-container .btn-group .log-in {
     color: white;
-    background-color: #BF6326;
+    background-color: #CD5C08;
     padding: 8px 28px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .navbar-container .btn-group .sign-up {
     background-color: transparent !important;
     padding: 8px 24px;
+    font-family: 'Raleway', sans-serif;
+    border: 1px solid#CD5C08;
+    color:#CD5C08
 }
 
 .navbar-container .btn-group .btn:hover {
-    background-color: #bf6326b8 !important;
+    background-color: #CD5C08b8 !important;
 }
