--- a/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.css
+++ b/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.css
@@ -10,9 +10,17 @@
 a {
     width: 100%;
     text-align: center;
-    text-decoration: none;
-    color: black;
-    font-size: 28px;
-    font-family: Inter;
-    font-weight: 400;
+    text-decoration: underline;
+    color: rgb(159, 159, 159);
+    font-size: 24px;
+    font-family: 'Raleway', sans-serif; 
+}
+.container-fluid{
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-top:40px;
+    padding-bottom:40px;
+}
+.style-type{
+    padding-top:20px;
 }
