--- a/src/app/pages/renter/home/components/header/header.component.html
+++ b/src/app/pages/renter/home/components/header/header.component.html
@@ -5,6 +5,7 @@
         <br>
         ONE STAY AT A TIME
     </h1>
+    <div class="style-header">
     <div class="btn-group filter" role="group">
         <button type="button" class="btn">Place</button>
         <button type="button" class="btn">Check in</button>
@@ -12,4 +13,5 @@
         <button type="button" class="btn">Guest</button>
         <i class="btn bi bi-search"></i>
     </div>
+</div>
 </header>
