--- a/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.html
+++ b/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.html
@@ -1,4 +1,6 @@
+<div class="style-type">
 <app-accommodation-type-option></app-accommodation-type-option>
+</div>
 <div class="container-fluid">
     <div class="row row-cols-4 g-4">
         <app-accommodation-item></app-accommodation-item>
