--- a/src/app/pages/renter/home/components/accommodation-list/components/accommodation-item/accommodation-item.component.css
+++ b/src/app/pages/renter/home/components/accommodation-list/components/accommodation-item/accommodation-item.component.css
@@ -6,6 +6,8 @@ p {
     margin-top: 8px;
     display: flex;
     justify-content: space-between;
+    font-family: 'Raleway', sans-serif; 
+    font-weight: bold;
 }
 
 .item-address span {
@@ -16,4 +18,7 @@ p {
 .item-address span i {
     display: flex;
     align-items: center;
+}
+.item-price{
+    font-weight: bold;
 }
