--- a/src/app/pages/renter/home/components/accommodation-list/components/accommodation-type-option/accommodation-type-option.component.css
+++ b/src/app/pages/renter/home/components/accommodation-list/components/accommodation-type-option/accommodation-type-option.component.css
@@ -9,23 +9,22 @@
     width: fit-content !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
     border: none !important;
+    border-radius: 30px !important;
+    background-color: #F3ECE6;
 }
 
 .btn {
     color: black;
     background-color: #F3ECE6;
-    font-size: 16px;
-    font-family: Inter;
-    border: 1px solid #336668 !important;
+    font-size: 14px;
     width: 120px !important;
-}
+    border-radius: 30px !important;
+    font-family: 'Raleway', sans-serif;
 
-.btn:hover {
-    background-color: #336668a2 !important;
-    color: black !important;
 }
-
 .active {
     background-color: #336668 !important;
     color: white !important;
+    border-radius: 30px !important;
+    border: none ;
 }
