--- a/src/app/pages/renter/home/components/adventure-section/adventure-section.component.css
+++ b/src/app/pages/renter/home/components/adventure-section/adventure-section.component.css
@@ -9,9 +9,10 @@ h2 {
     text-align: center;
     color: #406567;
     font-size: 36px;
-    font-family: Inter;
-    font-weight: 700;
-    word-wrap: break-word
+    font-family: 'Raleway', sans-serif; 
+    font-weight:bolder;
+    word-wrap: break-word;
+    padding-top:20px;
 }
 
 img {
@@ -21,5 +22,9 @@ img {
 }
 
 .adventure-content {
-    gap: 20px !important
+    gap: 20px !important;
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-top:40px;
+    padding-bottom:40px;
 }
