FH-24 | Refactor code

--- a/src/app/pages/renter/story/story.component.html
+++ b/src/app/pages/renter/story/story.component.html
@@ -30,7 +30,7 @@
   </div>
 </div>
 
-<div class="mission-vision d-flex">
+<div class="mission-vision d-flex justify-content-evenly mt-5">
   <div class="mission">
     <h3>Our Mission</h3>
     <p>
@@ -51,25 +51,55 @@
   </div>
 </div>
 
-<div>
+<div class="founders my-5">
   <p class="founder-title">Meet our founders</p>
-  <div class="image-container">
-    <img src="assets/images/quynh.png" />
-    <img src="assets/images/ngoc.png" />
-    <img src="assets/images/my.png" />
-    <img src="assets/images/hoang.png" />
-    <img src="assets/images/tu.png" />
+  <div class="image-container d-flex justify-content-evenly">
+    <div class="founder">
+      <img src="assets/images/quynh.png" />
+      <h4>
+        Truc Quynh
+      </h4>
+      <p>
+        Master chef
+      </p>
+    </div>
+    <div class="founder">
+      <img src="assets/images/ngoc.png" />
+      <h4>
+        My Ngoc
+      </h4>
+      <p>
+        Master chef
+      </p>
+    </div>
+    <div class="founder">
+      <img src="assets/images/my.png" />
+      <h4>
+        Tra My
+      </h4>
+      <p>
+        Master chef
+      </p>
+    </div>
+    <div class="founder">
+      <img src="assets/images/hoang.png" />
+      <h4>
+        Dang Hoang
+      </h4>
+      <p>
+        Master chef
+      </p>
+    </div>
+    <div class="founder">
+      <img src="assets/images/tu.png" />
+      <h4>
+        Trong Tu
+      </h4>
+      <p>
+        Master chef
+      </p>
+    </div>
   </div>
 </div>
 
-<div class="client d-flex flex-column align-items-center">
-  <p class="client-title">What Our Clients Say?</p>
-  <img src="assets/svg/quotation.svg" class="quotation-mark" />
-  <p class="comment">
-    The owner also assisted with contact information for famous local tourist
-    destinations, she also facilitated a change in the check-out time compared
-    to the plan so that the team was so happy.
-  </p>
-  <img src="assets/svg/quotation.svg" class="quotation-mark-flip" />
-  <p class="client-name">To Ngoc Han</p>
-</div>
+<app-footer></app-footer>
