--- a/src/app/pages/renter/story/story.component.css
+++ b/src/app/pages/renter/story/story.component.css
@@ -29,17 +29,18 @@
 }
 
 .mission-vision {
-    margin-top: 160px;
+    background: url(src/assets/images/vn-delta.png) center/cover no-repeat;
     width: 100%;
     background-color: #292E36;
     color: #fff;
     opacity: 0.9;
+    padding: 180px 0;
+    gap: 40px;
 }
 
 .mission,
 .vision {
     width: 50%;
-    padding: 50px;
 }
 
 .mission h3,
@@ -59,69 +60,35 @@
 }
 
 .founder-title {
-    margin-top: 160px;
-    font-family: "Raleway-Bold", Helvetica;
+    margin-bottom: 12px;
     color: #000000;
-    font-size: 30px;
+    font-size: 28px;
     font-weight: 800;
     text-align: center;
+    color: #CD5C08
 }
 
-.image-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.image-container img {
-    width: 20%;
-    max-width: 100%;
+.founders .founder {
+    width: 18%;
     height: auto;
     transition: transform 0.3s ease;
-    margin-top: 40px;
 }
 
-.image-container img:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.founders .founder:hover {
     transform: scale(1.1);
     z-index: 1;
 }
 
-.client {
-    margin-top: 160px;
-    width: 100%;
-    height: 400px;
-    background-color: #f3ece6;
-    padding: 16px;
+.founders .founder img {
+    max-width: 100%;
 }
 
-.client-title {
-    font-size: 30px;
-    font-weight: bold;
-    color: #bf6326;
-}
-
-.quotation-mark {
-    width: 40px;
-    height: 40px;
-}
-
-.quotation-mark-flip {
-    transform: scaleX(-1);
-    width: 40px;
-    height: 40px;
-}
-
-.comment {
-    font-style: italic;
-    color: #000000;
-    font-size: 16px;
+.founder h4,
+.founder p {
     text-align: center;
-    line-height: 40px;
+    margin-bottom: 0;
 }
 
-.client-name {
-    color: #000000;
-    font-size: 20px;
-    font-weight: bold;
+.founder h4 {
+    margin-top: 4px;
 }
