--- a/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.html
+++ b/src/app/pages/renter/home/components/accommodation-list/accommodation-list.component.html
@@ -1,7 +1,7 @@
-<div class="style-type">
-<app-accommodation-type-option></app-accommodation-type-option>
+<div class="mt-2">
+    <app-accommodation-type-option></app-accommodation-type-option>
 </div>
-<div class="container-fluid">
+<div class="container-fluid px-4 py-3">
     <div class="row row-cols-4 g-4">
         <app-accommodation-item></app-accommodation-item>
         <app-accommodation-item></app-accommodation-item>
