--- a/src/app/pages/renter/home/components/accommodation-list/components/accommodation-type-option/accommodation-type-option.component.css
+++ b/src/app/pages/renter/home/components/accommodation-list/components/accommodation-type-option/accommodation-type-option.component.css
@@ -9,7 +9,7 @@
     width: fit-content !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
     border: none !important;
-    border-radius: 30px !important;
+    border-radius: 28px !important;
     background-color: #F3ECE6;
 }
 
@@ -18,13 +18,18 @@
     background-color: #F3ECE6;
     font-size: 14px;
     width: 120px !important;
-    border-radius: 30px !important;
-    font-family: 'Raleway', sans-serif;
-
+    border-radius: 28px !important;
+    border: none !important;
+    margin: 0 !important;
 }
+
+.btn:active {
+    border: none !important;
+}
+
 .active {
     background-color: #336668 !important;
     color: white !important;
-    border-radius: 30px !important;
-    border: none ;
+    border-radius: 28px !important;
+    border: none;
 }
