--- a/src/app/pages/renter/home/components/adventure-section/adventure-section.component.html
+++ b/src/app/pages/renter/home/components/adventure-section/adventure-section.component.html
@@ -1,7 +1,7 @@
 <h2>
     Adventure on your way
 </h2>
-<div class="container-fluid d-flex flex-column adventure-content">
+<div class="container-fluid d-flex flex-column adventure-content px-4 py-3">
     <div class="row row-cols-3 g-4">
         <div class="col">
             <img src="assets/mock/h1.jpg" alt="Random first slide" />
