--- a/src/app/pages/renter/home/components/top-rate/top-rate.component.css
+++ b/src/app/pages/renter/home/components/top-rate/top-rate.component.css
@@ -3,21 +3,17 @@
 }
 
 .best-for-you-section {
-    font-family: 'Raleway', sans-serif; 
     background-color: white;
-    padding-left: 120px;
-    padding-right: 120px;
-    padding-top:40px;
-    padding-bottom:40px;
-
+    padding: 20px 60px
 }
+
 .best-for-you-section h2 {
     text-align: center;
     color: #A54C20;
     font-size: 30px;
-    font-family: 'Raleway', sans-serif; 
-    font-weight:bolder;
-    padding-bottom:20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder;
+    padding-bottom: 20px;
 }
 
 p {
@@ -28,7 +24,7 @@ p {
     margin-top: 12px;
     display: flex;
     justify-content: space-between;
-    font-weight:bolder;
+    font-weight: bolder;
 }
 
 .item-address span {
@@ -40,6 +36,7 @@ p {
     display: flex;
     align-items: center;
 }
-.item-price{
-    font-weight:bolder;
+
+.item-price {
+    font-weight: bolder;
 }
