--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 html,
 body {
     height: 100%;
+}
+
+body {
+    font-family: Raleway, sans-serif;
 }
 
 .sign-up-modal {
