--- a/src/app/components/history-detail/history-detail.component.html
+++ b/src/app/components/history-detail/history-detail.component.html
@@ -1,40 +1,103 @@
-<!-- 
-<div class="history-detail-container">
-    <div class="zoom-wrapper">
-      <img src="img/room.jpg" alt="Forest" />
-    </div>
-    <div class="info">
-      <div class="div-text">
-        <p class="text-bold" style="width: 70%;">A room in a department</p>
-        <div class="text-bold">$10</div>
-      </div>
-      <div class="div-text">
-        <div class="icon"><img class="icon-detail" src="img/icon-calendar.png" /></div>
-        <p class="text-regular">24 Nov 2023 - 27 Nov 2023, UTC+07:00</p>
-      </div>
+<div class="contain-cover">
 
-      <div class="div-text">
-        <div class="icon"><img class="icon-detail" src="img/icon-user.png" /></div>
-        <div class="text-regular">1 person</div>
-      </div>
+  <div class="nav-bar">
+      <img src="assets/images/arrow-back.png" alt="" class="img-nav">
+      Back
+  </div>
 
-      <div class="div-text">
-        <div class="icon"><img class="icon-avatar" src="img/avatar.png" /></div>
-        <div class="text-owner">Truc Quynh</div>
-        <div class="rating">
-          <div class="frame-rating">
-            <span class="text-regular">4.5</span>
-            <img class="icon-star" src="img/icon-star.png" />
+  <div class="group">
+      <div class="title">A room in apartment</div>
+      <div class="div-info">
+
+          <div class="div-detail">
+
+              <div class="content">
+                  <div class="item">
+                      <img src="assets/icons/calendar.png" alt="" class="item-icon">
+                      <div>Check in</div>
+                  </div>
+                  <div>24 Nov 2023</div>
+              </div>
+              <div class="content">
+                  <div class="item">
+                      <img src="assets/icons/calendar.png" alt="" class="item-icon">
+                      <div>Check out</div>
+                  </div>
+                  <div>27 Nov 2023</div>
+              </div>
+              <div class="content">
+                  <div class="item">
+                      <img src="assets/icons/user.png" alt="" class="item-icon">
+                      <div>Guest</div>
+                  </div>
+                  <div>1</div>
+              </div>
+              <div class="content">
+                  <div class="item">
+                      <img src="assets/images/avatar.png" alt="" class="item-icon">
+                      <div>Owner</div>
+                  </div>
+                  <div class="item-bold">Truc Quynh</div>
+              </div>
+              <hr>
+              <div class="div-detail"></div>
+              <div class="content">
+                  <div class="item">
+                      <div class="item-bold">ReservationID</div>
+                  </div>
+                  <div>#1234567890</div>
+              </div>
+              <div class="content">
+                  <div class="item">
+                      <div>Fees</div>
+                  </div>
+                  <div>$30</div>
+              </div>
+              <div class="content">
+                  <div class="item">
+                      <div>Service fees</div>
+                  </div>
+                  <div>$10</div>
+              </div>
+              <div class="content">
+                  <div class="item">
+                      <div class="item-bold">Total</div>
+                  </div>
+                  <div>$35</div>
+              </div>
           </div>
-        </div>
+          <div class="img-room">
+              <div id="carouselExampleIndicators" class="carousel slide">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="assets/mock/h1.jpg" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/mock/h2.jpg" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/mock/h3.jpg" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+          </div>
       </div>
+  </div>
 
-      <div class="div-text">
-        <div class="icon"><img class="icon-detail" src="img/green.png" /></div>
-        <div class="frame-status">
-          <span class="text-regular">Status:</span>
-          <span class="text-regular">active</span>
-        </div>
-      </div>
-    </div>
-  </div> -->
+  <div class="divider">
+      <div class=""></div>
+  </div>
+</div>
