FH-11 | Pick home

--- a/src/app/pages/renter/accommodation-detail/accommodation-detail.component.html
+++ b/src/app/pages/renter/accommodation-detail/accommodation-detail.component.html
@@ -1,1 +1,5 @@
-<p>accommodation-detail works!</p>
+<div class="container mt-5">
+  <app-booking-detail-section></app-booking-detail-section>
+  <app-infrastructure-section></app-infrastructure-section>
+  <app-review-section></app-review-section>
+</div>
