--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,6 @@ body {
 .edit-guest-number-modal {
     max-width: 440px !important;
 }
+.payment-form-modal {
+    max-width: 1200px !important;
+}
